# escpr2-tools

./: README.md  pyproject.toml
escpr2_tools/: config.py  constants.py  decode_escpr.py  escpr_commands.py  modify_setq.py  proxy.py
mitmproxy/: decode_escpr.py  escpr_commands.py  modify_setq.py
snmp-fw/: Cargo.toml
snmp-fw/src/: main.rs
tests/: test_escpr_commands.py  test_modify_setq.py  test_proxy.py
