[project]
name = "escpr2-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "DerFetzer",email = "kontakt@der-fetzer.de"}
]
license = "LGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mitmproxy (>=12.2.0,<13.0.0)"
]

[project.scripts]
decode-escpr = "escpr2_tools.decode_escpr:main"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
